[workspace]
members = ["packages/*", "contracts/*", "tests", "utils/*"]

[workspace.package]
version = "2.2.0"
edition = "2021"
license = "GPL 3.0"
repository = "https://github.com/cosmorama/wynddex"

[workspace.dependencies]
anyhow = "1"
wyndex = { path = "./packages/wyndex", default-features = false }
cw20-base = { version = "2.0", package = "cw20-base", features = ["library"] }
wyndex-factory = { path = "./contracts/factory" }
cw-placeholder = { path = "./contracts/cw-placeholder" }
wyndex-pair = { path = "./contracts/pair" }
wyndex-pair-lsd = { path = "./contracts/pair_lsd" }
wyndex-multi-hop = { path = "./contracts/multi-hop" }
wyndex-stake = { path = "./contracts/stake" }

lp-converter = { path = "./contracts/lp-converter", features = ["library"] }
cosmwasm-schema = "2.1"
cosmwasm-std = "2.1"
cw2 = "2.0"
cw20 = "2.0"
semver = "1"
cw-controllers = "2.0"
cw-multi-test = { version = "2.0", features = ["staking"] }
cw-storage-plus = "2.0"
cw-utils = "2.0"
derivative = "2.2"
itertools = "0.10"
proptest = "1.0"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"
test-case = "2.2.1"
uint = "0.9"

# Copied only the used utils
# wynd-curve-utils = { git = "https://github.com/wynddao/wynddao.git", tag = "v1.6.0", package = "wynd-utils" }
wynd-lsd-hub = { git = "https://github.com/abstractsdk/wynd-lsd.git", version = "1.2.1", features = [
    "library",
] }

[profile.release.package.wyndex-factory]
codegen-units = 1
incremental = false

[profile.release.package.wyndex-multi-hop]
codegen-units = 1
incremental = false

[profile.release.package.wyndex-pair]
codegen-units = 1
incremental = false

[profile.release.package.wyndex-pair-lsd]
codegen-units = 1
incremental = false

[profile.release.package.wyndex-stake]
codegen-units = 1
incremental = false

[profile.release.package.cw-placeholder]
codegen-units = 1
incremental = false

[profile.release.package.gauge-adapter]
codegen-units = 1
incremental = false

[profile.release.package.junoswap-staking]
codegen-units = 1
incremental = false

[profile.release.package.raw-migration]
codegen-units = 1
incremental = false

[profile.release.package.lp-converter]
codegen-units = 1
incremental = false

[profile.release.package.cw-splitter]
codegen-units = 1
incremental = false

[profile.release.package.nominated-trader]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
strip = true
